force-app/main/default/objects/CAZ_Zona__c/CAZ_Zona__c.object-meta.xml
<CustomObject>
    <label>Zona</label>
    <nameField>
        <label>Zona</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zonas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>