force-app/main/default/objects/CAZ_Zona__c/fields/CAZ_Codigo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Codigo__c</fullName>
    <externalId>true</externalId>
    <label>Código</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>