force-app/main/default/objects/CAZ_Zona__c/fields/CAZ_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Descripcion__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>