force-app/main/default/objects/CAZ_Zona__c/fields/CAZ_Gerente__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Gerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indica el gerente de la zona</description>
    <label>Gerente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zonas</relationshipName>
    <type>Lookup</type>
</CustomField>