force-app/main/default/objects/CAZ_Zona__c/fields/CAZ_GrupoCompartidoId__c.field-meta.xml
<CustomField>
    <fullName>CAZ_GrupoCompartidoId__c</fullName>
    <description>Id del Grupo Publico usado para compartir las Plantas de esta Zona con los usuarios del portal</description>
    <label>Grupo Compartido Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>