force-app/main/default/objects/CAZ_Zona__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CAZ_Codigo__c</columns>
    <columns>CAZ_Descripcion__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>